<resources>
    <string name="app_name">Reto1Pizzeria</string>

    <string name="app_btnpedidotext">"Hacer Pedido"</string>
    <string name="app_btnlogintext">"Iniciar Sesión"</string>

    <string name="app_edittextnamehint">"Nombre del Producto"</string>
    <string name="app_edittextdescriptionhint">"Descripción del Producto"</string>
    <string name="app_edittextpricehint">"Precio del Producto"</string>
    <string name="app_edittextcanthint">"Cantidad Stock"</string>

    <string name="app_edittextmailuserhint">"Email de Usuario"</string>
    <string name="app_edittextpasswordhint">"Contraseña"</string>
    <string name="app_btnregistertext">"Registrar Usuario"</string>

    <string name="app_btnverproductext">"Ver Productos"</string>
    <string name="app_btnagregarproductext">"Agregar Producto"</string>

    <string name="app_btnVerFirebaseText">"Ver Firebase"</string>
    <string name="app_btnVerSQLText">"Ver SQLite"</string>
    <string name="app_btnSyncFirebaseText">"Sincronizar"</string>

    <string name="item_button_add">Editar</string>
    <string name="item_button_delete">Eliminar</string>

    <string name="item_button_addPedido">Agregar</string>
    <string name="item_button_deletePedido">Quitar</string>

    <string name="price_format">%.2f</string>

    <!-- Otros Strings del activity_main-->
    <string name="hint_id">ID</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_descrip">Descripcion</string>
    <string name="hint_price">Precio</string>
    <string name="hint_cant">Cantidad en Stock</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>

    <string name="hint_address">Dirección de Entrega</string>
    <string name="hint_namePedido">Nombre de quien recibe</string>


</resources>