<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reto1pizzeria.PedidoActivity"
    android:orientation="vertical"
    android:background="@drawable/fondoreto1"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grismenu"
        android:orientation="horizontal"
        android:gravity="center_vertical|center">

        <ImageView
            android:id="@+id/headerLogo"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:layout_marginRight="50sp"
            >

        </ImageView>

        <ImageView
            android:id="@+id/headerImgHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/home2"
            android:layout_marginLeft="10sp"
            >
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:padding="25dp"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/bodyTextWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Menú de Pedidos"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            >
        </TextView>


        <ListView
            android:id="@+id/listViewProductsPedido"
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:layout_marginTop="10sp"
            android:background="@color/grismenu">

        </ListView>



        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@color/griscard"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:padding="10sp"
            android:layout_marginTop="10sp">

        </EditText>

        <EditText
            android:id="@+id/editTextNamePedido"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@color/griscard"
            android:layout_marginTop="10sp"
            android:hint="@string/hint_namePedido"
            android:inputType="text"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:padding="10sp">

        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bodyTextCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Elementos en Carrito"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical">
            </TextView>

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/carrito"
                android:layout_margin="10sp">

            </ImageView>

            <EditText
                android:layout_width="80sp"
                android:layout_height="45sp"
                android:hint="No"
                android:background="@color/griscard"
                android:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:layout_gravity="center_vertical">
            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/buttonSichronized"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/app_btnpedidotext"
            android:textSize="24sp"
            app:cornerRadius="10dp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footerImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fondopizzalovers3">
    </LinearLayout>


</LinearLayout>